--- a/index.html
+++ b/index.html
@@ -5,8 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Triva Game</title>
+    <!-- bootstrap css-->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+<!--internal css-->
+<link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    
+    <div class="container">
+            <div class="row">
+            <div class="col-md-7 game">
+
+                    <div class="jumbotron ">
+                            <div class="container">
+                                <div class="score"></div>
+                                    <h1 class="display-4 question-view">Trivia Game!</h1>
+                                    
+                                </div>
+                        </div>
+                <div class="options-view">
+                     <button class="playBtn btn btn-warning btn-lg" >Play!</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
+<script src="assets/javascript/app.js"></script>
 </body>
 </html>
