update render question, render button, and jquery click handlers

--- a/index.html
+++ b/index.html
@@ -18,12 +18,17 @@
                     <div class="jumbotron ">
                             <div class="container">
                                 <div class="score"></div>
-                                    <h1 class="display-4 question-view">Trivia Game!</h1>
+                                    <h1 class="display-4">Trivia Game!</h1>
                                     
                                 </div>
                         </div>
-                <div class="options-view">
-                     <button class="playBtn btn btn-warning btn-lg" >Play!</button>
+                        <div class="question-view">
+
+                        </div>
+                <div id="hidden-div">
+                    <div class="options-view">
+                        <button class="playBtn btn btn-warning btn-lg" >Play!</button>
+                   </div>
                 </div>
             </div>
         </div>
