--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <div class="jumbotron ">
                             <div class="container">
                                 <div class="score"></div>
-                                    <h1 class="display-4">Trivia Game!</h1>
+                                    <h1 class="display-4 display-view">Trivia Game!</h1>
                                     
                                 </div>
                         </div>
