--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
                     <div class="jumbotron ">
                             <div class="container">
-                                <div class="score"></div>
+                                <div><p>Score: <span class="score"></span></p> <p id="timer">Timer:<span id="time"></span></p></div>
                                     <h1 class="display-4 display-view">Trivia Game!</h1>
                                     
                                 </div>
